[gd_scene load_steps=7 format=3 uid="uid://iov3iav204i4"]

[ext_resource type="Script" path="res://preparePhase/crisis_start.gd" id="1_7i0f1"]
[ext_resource type="Texture2D" uid="uid://dnbnxosef5r58" path="res://res/sprites/citymap/citymap.png" id="2_oi1nj"]
[ext_resource type="PackedScene" uid="uid://cf2pewcvtrtic" path="res://GUI/UX_button.tscn" id="3_yuscm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svi03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wpfpt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2dld"]

[node name="CrisisStart" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7i0f1")

[node name="ColorRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -512.0
offset_right = 288.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oi1nj")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.470588, 0.470588, 0.470588, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -150.0
offset_right = 226.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Easy" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_svi03")
text = "Kurz"

[node name="Normal" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_wpfpt")
text = "Mittel"

[node name="Hard" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_j2dld")
text = "Lang"

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 2.0
value = 1.0
tick_count = 3
ticks_on_borders = true

[node name="Continue" parent="CanvasLayer/VBoxContainer" instance=ExtResource("3_yuscm")]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Weiter"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
